# timeseries-transform

./: .gitattributes  .gitignore  API_SPECIFICATION.md  CODE_REVIEW.md  LICENSE  PERMISSIONS.md  README.md  check-quality.bat  docker-compose.yml  docker.env.example  ktopplatformtimeseries-platform  start-all.bat  stop-all.bat  test.txt  完整测试步骤.md  开发文档.md  测试指南.md
backend/: .dockerignore  Dockerfile  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  advanced_viz.py  auth.py  batch.py  comparison.py  configurations.py  datasets.py  datasets.py.bak  experiments.py  exploration.py  folders.py  model_templates.py  quality.py  reports.py  results.py  visualization.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  enums.py  schemas.py
backend/app/services/: __init__.py  auth.py  cleaning.py  dataset_service.py  executor.py  permissions.py  quality.py  security.py  utils.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: .gitkeep  001_initial.py  002_add_users.py  003_add_experiments.py  004_add_model_templates.py  005_set_admin_user.py  006_add_sort_order_and_config_user.py  007_add_folders.py  008_add_folder_description.py  009_add_folder_parent_name_unique.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_datasets.py  test_folders.py  test_quality.py  test_results.py
backend/uploads/cache/: .gitkeep
backend/uploads/datasets/: .gitkeep
datasets/: README.md
(+238 files in other folders)
